Pressing arrow keys in an empty directory asserts #69451

Closed
opened 2019-09-03 17:03:54 +02:00 by Campbell Barton · 4 comments

In 4c14a7484cf1e79aaf1ff9f320fee53be4a9b60a there is an assert in the file browser.

  • Open the file browser (Ctrl-O).
  • Navigate to a directory with now blend files or directories in it.
  • Press the right arrow 3 times.

This asserts (in debug builds)

/src/blender/blender.bin(_start+0x2e) [0x55d7d3f843ae]
BLI_assert failed: /src/blender/source/blender/editors/space_file/file_ops.c:666, file_walk_select_selection_set(), at '(((-1) < (numfiles)) ? (((-1) < (active) && (active) < (numfiles))) : (((numfiles) < (active) && (active) < (-1))))'
In `4c14a7484cf1e79aaf1ff9f320fee53be4a9b60a` there is an assert in the file browser. - Open the file browser (Ctrl-O). - Navigate to a directory with now blend files or directories in it. - Press the right arrow 3 times. This asserts (in debug builds) ``` /src/blender/blender.bin(_start+0x2e) [0x55d7d3f843ae] BLI_assert failed: /src/blender/source/blender/editors/space_file/file_ops.c:666, file_walk_select_selection_set(), at '(((-1) < (numfiles)) ? (((-1) < (active) && (active) < (numfiles))) : (((numfiles) < (active) && (active) < (-1))))' ```
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Julian Eisel was assigned by Campbell Barton 2019-09-03 17:04:12 +02:00
Member

Added subscriber: @Poulpator

Added subscriber: @Poulpator

This issue was referenced by 9e3cd98529

This issue was referenced by 9e3cd98529dc2f8dbb00357126d5286ee74fae1f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69451
No description provided.