Fix T69451: Walk-select in empty directory asserts

Code assumed the '..' was there, which isn't the case any more. Just
early exiting for empty directories is fine.